--- a/In Action/Notebook_3.ipynb
+++ b/In Action/Notebook_3.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "mount_file_id": "1b2ZFvx-dmOnoHiCUUG1OMCLCB5KOcnkV",
-      "authorship_tag": "ABX9TyP6hDk6AB/jPaugNYynKgfe",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lmansf/DataFramework/blob/main/Notebook_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,15 +12,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Predictions"
-      ],
       "metadata": {
         "id": "sPK6csNVrSMZ"
-      }
+      },
+      "source": [
+        "Predictions"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "56cHO5KRpBG3"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import seaborn as sns\n",
@@ -55,12 +43,7 @@
         "\n",
         "pd.set_option('display.max_columns', None)\n",
         "pd.set_option('display.max_rows', None)\n"
-      ],
-      "metadata": {
-        "id": "56cHO5KRpBG3"
-      },
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -81,9 +64,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "final.head()"
-      ],
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -92,19 +73,14 @@
         "id": "Mae6L-pPu7Pp",
         "outputId": "d668e7bf-6452-42ee-cc41-c7f70381815f"
       },
-      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "     Id      SalePrice\n",
-              "0  1461  142685.406250\n",
-              "1  1462  139475.609375\n",
-              "2  1463  159249.609375\n",
-              "3  1464  166794.906250\n",
-              "4  1465  267554.312500"
-            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "summary": "{\n  \"name\": \"final\",\n  \"rows\": 1459,\n  \"fields\": [\n    {\n      \"column\": \"Id\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 421,\n        \"min\": 1461,\n        \"max\": 2919,\n        \"num_unique_values\": 1459,\n        \"samples\": [\n          2782,\n          2297,\n          1874\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"SalePrice\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 1117,\n        \"samples\": [\n          94511.140625,\n          126065.09375,\n          147325.15625\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}",
+              "type": "dataframe",
+              "variable_name": "final"
+            },
             "text/html": [
               "\n",
               "  <div id=\"df-c3f29e1b-4844-4abc-b64b-c1ece5670e16\" class=\"colab-df-container\">\n",
@@ -242,36 +218,60 @@
               "    </div>\n",
               "  </div>\n"
             ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "variable_name": "final",
-              "summary": "{\n  \"name\": \"final\",\n  \"rows\": 1459,\n  \"fields\": [\n    {\n      \"column\": \"Id\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 421,\n        \"min\": 1461,\n        \"max\": 2919,\n        \"num_unique_values\": 1459,\n        \"samples\": [\n          2782,\n          2297,\n          1874\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"SalePrice\",\n      \"properties\": {\n        \"dtype\": \"float32\",\n        \"num_unique_values\": 1117,\n        \"samples\": [\n          94511.140625,\n          126065.09375,\n          147325.15625\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
-            }
+            "text/plain": [
+              "     Id      SalePrice\n",
+              "0  1461  142685.406250\n",
+              "1  1462  139475.609375\n",
+              "2  1463  159249.609375\n",
+              "3  1464  166794.906250\n",
+              "4  1465  267554.312500"
+            ]
           },
+          "execution_count": 9,
           "metadata": {},
-          "execution_count": 9
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "final.head()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "final.to_csv('/content/drive/MyDrive/House Prices/FinalPredictions.csv', index=False)"
-      ],
+      "execution_count": 10,
       "metadata": {
         "id": "y2x3ea0KvPhj"
       },
-      "execution_count": 10,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "final.to_csv('/content/drive/MyDrive/House Prices/FinalPredictions.csv', index=False)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "Gai9gD7Fv8Bp"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyP6hDk6AB/jPaugNYynKgfe",
+      "include_colab_link": true,
+      "mount_file_id": "1b2ZFvx-dmOnoHiCUUG1OMCLCB5KOcnkV",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
