--- a/In Action/Notebook_2.ipynb
+++ b/In Action/Notebook_2.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMC2tBiW0Cwvl/2viJIJeYt",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lmansf/DataFramework/blob/main/Notebook_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,35 +12,11 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Models"
-      ],
       "metadata": {
         "id": "F5NDV1fGrP7v"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lcXq63Y3Gkt9",
-        "outputId": "37158617-82b1-406f-a468-e49298a4b516"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
+      "source": [
+        "Models"
       ]
     },
     {
@@ -90,32 +50,29 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Kd68_le2HHSK"
+      },
+      "outputs": [],
       "source": [
         "X = df_model.drop('SalePrice', axis=1)\n",
         "y = df_model['SalePrice']\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
-      ],
-      "metadata": {
-        "id": "Kd68_le2HHSK"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Regression Model 1: Random Forest"
-      ],
       "metadata": {
         "id": "Ya581mqQJR4a"
-      }
+      },
+      "source": [
+        "# Regression Model 1: Random Forest"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "regressor = RandomForestRegressor(n_estimators = 10, random_state = 0)\n",
-        "regressor.fit(X_train, y_train)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -124,14 +81,9 @@
         "id": "f8piiTcGHrNK",
         "outputId": "12115828-ba21-4066-874a-9c0019fe16e7"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "RandomForestRegressor(n_estimators=10, random_state=0)"
-            ],
             "text/html": [
               "<style>#sk-container-id-4 {\n",
               "  /* Definition of color scheme common for light and dark mode */\n",
@@ -549,15 +501,42 @@
               "  background-color: var(--sklearn-color-fitted-level-3);\n",
               "}\n",
               "</style><div id=\"sk-container-id-4\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestRegressor(n_estimators=10, random_state=0)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-4\" type=\"checkbox\" checked><label for=\"sk-estimator-id-4\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>RandomForestRegressor</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.ensemble.RandomForestRegressor.html\">?<span>Documentation for RandomForestRegressor</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestRegressor(n_estimators=10, random_state=0)</pre></div> </div></div></div></div>"
+            ],
+            "text/plain": [
+              "RandomForestRegressor(n_estimators=10, random_state=0)"
             ]
           },
+          "execution_count": 23,
           "metadata": {},
-          "execution_count": 23
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "regressor = RandomForestRegressor(n_estimators = 10, random_state = 0)\n",
+        "regressor.fit(X_train, y_train)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0W06-Vh3IpGN",
+        "outputId": "95393837-b24c-433c-c9d5-134f78f8f691"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mean Absolute Error: 32598.286986301373\n",
+            "Mean Squared Error: 2048503673.4000688\n",
+            "R-squared: 0.7033669013839277\n"
+          ]
+        }
+      ],
       "source": [
         "reg_pred = regressor.predict(X_test)\n",
         "mae = mean_absolute_error(y_test, reg_pred)\n",
@@ -567,38 +546,38 @@
         "print(f\"Mean Absolute Error: {mae}\")\n",
         "print(f\"Mean Squared Error: {mse}\")\n",
         "print(f\"R-squared: {r2}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0W06-Vh3IpGN",
-        "outputId": "95393837-b24c-433c-c9d5-134f78f8f691"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mean Absolute Error: 32598.286986301373\n",
-            "Mean Squared Error: 2048503673.4000688\n",
-            "R-squared: 0.7033669013839277\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Regression Model 2: XGBoost Regressor"
-      ],
       "metadata": {
         "id": "U1WhFgrxJVWw"
-      }
+      },
+      "source": [
+        "# Regression Model 2: XGBoost Regressor"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MEoGT4MrH6Tg",
+        "outputId": "d4667b1e-ce6a-4734-cdc3-476859dc7892"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mean Absolute Error: 31336.650390625\n",
+            "Mean Squared Error: 2032040576.0\n",
+            "R-squared: 0.7057508230209351\n"
+          ]
+        }
+      ],
       "source": [
         "XGBoostRegressor = XGBRegressor()\n",
         "XGBoostRegressor.fit(X_train, y_train)\n",
@@ -612,39 +591,39 @@
         "print(f\"Mean Absolute Error: {mae}\")\n",
         "print(f\"Mean Squared Error: {mse}\")\n",
         "print(f\"R-squared: {r2}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MEoGT4MrH6Tg",
-        "outputId": "d4667b1e-ce6a-4734-cdc3-476859dc7892"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mean Absolute Error: 31336.650390625\n",
-            "Mean Squared Error: 2032040576.0\n",
-            "R-squared: 0.7057508230209351\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "0m9wZIGHJaXq"
+      },
       "source": [
         "# Regression Model 3: Support Vector Regression\n",
         "Support Vector Machine family\n"
-      ],
-      "metadata": {
-        "id": "0m9wZIGHJaXq"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JHcfya0cJe8U",
+        "outputId": "9f0cf23a-22a5-4e0b-822c-66bec3b5e387"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mean Absolute Error: 55521.3446610583\n",
+            "Mean Squared Error: 7206927503.6028805\n",
+            "R-squared: -0.04359746318971136\n"
+          ]
+        }
+      ],
       "source": [
         "SVRegressor = make_pipeline(StandardScaler(), SVR(C=1.0, epsilon=0.2))\n",
         "SVRegressor.fit(X_test, y_test)\n",
@@ -658,38 +637,46 @@
         "print(f\"Mean Absolute Error: {mae}\")\n",
         "print(f\"Mean Squared Error: {mse}\")\n",
         "print(f\"R-squared: {r2}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JHcfya0cJe8U",
-        "outputId": "9f0cf23a-22a5-4e0b-822c-66bec3b5e387"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mean Absolute Error: 55521.3446610583\n",
-            "Mean Squared Error: 7206927503.6028805\n",
-            "R-squared: -0.04359746318971136\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Regression Model 4: MLP Regressor"
-      ],
       "metadata": {
         "id": "WKOObZx-ZjBl"
-      }
+      },
+      "source": [
+        "# Regression Model 4: MLP Regressor"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5xFI00hqZ_L0",
+        "outputId": "5a217ee3-89b6-4d3b-ffc4-b997d8fe37a5"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mean Absolute Error: 69971.56446053453\n",
+            "Mean Squared Error: 9913869969.752375\n",
+            "R-squared: -0.43557563825278267\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (2000) reached and the optimization hasn't converged yet.\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "\n",
@@ -708,44 +695,11 @@
         "print(f\"Mean Absolute Error: {mae}\")\n",
         "print(f\"Mean Squared Error: {mse}\")\n",
         "print(f\"R-squared: {r2}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5xFI00hqZ_L0",
-        "outputId": "5a217ee3-89b6-4d3b-ffc4-b997d8fe37a5"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mean Absolute Error: 69971.56446053453\n",
-            "Mean Squared Error: 9913869969.752375\n",
-            "R-squared: -0.43557563825278267\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (2000) reached and the optimization hasn't converged yet.\n",
-            "  warnings.warn(\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import joblib\n",
-        "joblib.dump(regressor, '/content/drive/MyDrive/House Prices/regressor.pkl')\n",
-        "joblib.dump(XGBoostRegressor, '/content/drive/MyDrive/House Prices/XGBoostRegressor.pkl')\n",
-        "joblib.dump(SVRegressor, '/content/drive/MyDrive/House Prices/SVRegressor.pkl')\n",
-        "joblib.dump(MLP, '/content/drive/MyDrive/House Prices/MLP.pkl')\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -753,28 +707,50 @@
         "id": "pCDtmzWDbDKA",
         "outputId": "7147bb82-ddd8-4335-9a30-a726f192c762"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "['/content/drive/MyDrive/House Prices/MLP.pkl']"
             ]
           },
+          "execution_count": 31,
           "metadata": {},
-          "execution_count": 31
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "import joblib\n",
+        "joblib.dump(regressor, '/content/drive/MyDrive/House Prices/regressor.pkl')\n",
+        "joblib.dump(XGBoostRegressor, '/content/drive/MyDrive/House Prices/XGBoostRegressor.pkl')\n",
+        "joblib.dump(SVRegressor, '/content/drive/MyDrive/House Prices/SVRegressor.pkl')\n",
+        "joblib.dump(MLP, '/content/drive/MyDrive/House Prices/MLP.pkl')\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "DVttf9eHmkhG"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMC2tBiW0Cwvl/2viJIJeYt",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
